add bug fixes add png icons

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,11 @@
     tools:context=".MainActivity">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/sunny_day"
         android:scaleType="fitXY"
-        />
+        android:src="@drawable/sunny_day" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,7 +63,7 @@
 
             </TableRow>
 
-            <!--Card pronostico por hora-->
+            <!--Card hourly forecast-->
             <LinearLayout
                 android:layout_height="150dp"
                 android:orientation="vertical"
@@ -108,6 +108,19 @@
 
         </TableLayout>
 
+
     </LinearLayout>
 
+    <Button
+        android:id="@+id/boton1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="#ffffffff"
+        android:text="Pronostico de la semana"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="100dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
